@@ -3,6 +3,8 @@
     - Texture rendering for particles.
     - Line rendering for particles.
     - Removed hash table usage outside entities. (Because that's not a real hash table so collisions don't handled at all). Now for textures and sound we use just a linear search. Also added missing texture and missing sound.
+    - Ability for particles to grow after birth.
+    - Renamed textures_table and sounds_table to textures_array and sounds_array.
 
 01.03.2025:
     - Particles rework almost completed. It finally works. 
